# WindowsTelemetryViewer.py

./: .gitattributes  .gitignore  .gitlab-ci.yml  ReadMe.md  pyproject.toml  setup.cfg
WindowsTelemetryViewer/: IRBS.py  PyQtJsonModel.py  TableWidget.py  __init__.py  __main__.py
WindowsTelemetryViewer/kaitai/: windows_diagnostics_framework_rbs.py
