[metadata]
name = WindowsTelemetryViewer
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/WindowsTelemetryViewer.py
description = A free open-source app to view Windows Diagnostics Framework .rbs files
long_description = file: README.md
keywords = windows, telemetry, espionage, microsoft
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
install_requires =
	kaitaistruct @ git+https://github.com/kaitai_io/kaitai_struct_python_runtime.git
	kaitai.compress
	PyQt5
extras_requires =
	rbs_parser = rbs_parser @ git+https://github.com/bluec0re/windows-rbs-parser.git
zip_safe = True
packages = WindowsTelemetryViewer, WindowsTelemetryViewer.kaitai
setup_requires = setuptools; setuptools_scm;
test_suite = tests.tests.Tests

[options.entry_points]
console_scripts = WindowsTelemetryViewer = WindowsTelemetryViewer.__main__:App.run